--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,9 @@
       {{ content }}
 
       <footer>
-        <p>
-          This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/deed.en_US">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
-        </p>
+          <div class="footer-table">
+              <div class="footer-cell">&copy; {{ site.domain }}, {{ site.copyright }} &ndash; <a href="/license/">license</a></div>
+          </div>
       </footer>
     </div>
 
