--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     </div>
       <footer>
           <div class="footer-table">
-              <div class="footer-cell">&copy; {{ site.domain }}, {{ site.copyright }} &ndash; <a href="/license/">license</a></div>
+              <div class="footer-cell">&copy; {{ site.domain }}, {{ site.copyright }} &ndash; <a href="/LICENSE.html">license</a></div>
           </div>
       </footer>
 
