adding pygment highlighter syntax fixing twitter theme code css

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -19,6 +19,8 @@
     <link rel="apple-icon" href="/public/images/all-icons/apple-icon.png">
     <link rel="apple-icon" sizes="72x72" href="/public/images/all-icons/apple-icon-72x72.png">
     <link rel="apple-icon" sizes="114x114" href="/public/images/all-icons/apple-icon-114x114.png">
+
+    <link rel="stylesheet" href="/public/css/syntax.css" type="text/css" />
   </head>
 
   <body>
