adding alert styles adding common disclaimer adding some more articles on howto jekyll/liquid

--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -4,6 +4,14 @@
 
 <div class="row">
   <div class="span10">
+
+{% if page.disclaimer == true %}
+<div class="alert alert-error">
+{% capture mydisclaimer %}{% include /themes/twitter/disclaimer.md %}{% endcapture %}
+{{ mydisclaimer | markdownify }}
+</div>
+{% endif %}
+
     {{ content }}
     <hr>
     <div class="pagination">
