--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -14,6 +14,7 @@
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/css/1.4.0/bootstrap.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/animate.min.css">
 
     <link rel="shortcut icon" href="/public/images/favicon.ico">
     <link rel="apple-icon" href="/public/images/all-icons/apple-icon.png">
@@ -23,9 +24,26 @@
     <link rel="stylesheet" href="/public/css/syntax.css" type="text/css" />
   </head>
 
+{% capture time_seed %}{{ 'now' | date: "%s" }}{% endcapture %}
+{% assign random = time_seed | times: 1103515245 | plus: 12345 | divided_by: 65536 | modulo: 32768 | modulo: 10 %}
+
   <body>
 
-    <div class="topbar">
+{% case random %}
+  {% when 0 %}
+     <div class="topbar animated fadeIn">
+  {% when 3 %}
+     <div class="topbar animated bounceIn">
+  {% when 5 %}
+     <div class="topbar animated rollIn">
+  {% when 7 %}
+     <div class="topbar animated slideInDown">
+  {% when 9 %}
+     <div class="topbar animated rubberBand">
+  {% else %}
+     <div class="topbar">
+{% endcase %}
+
       <div class="fill">
         <div class="container">
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
@@ -39,7 +57,6 @@
     </div>
 
     <div class="container">
-
       <div class="content">
         {{ content }}
       </div>
