--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -34,31 +34,29 @@
   </div>
   
   <div class="span4">
-  {% if page.original_date != nil %}
     <h4>Published</h4>
-    {% assign pub_date = page.original_date | date: "%B %-d %Y &nbsp&nbsp - &nbsp&nbsp %R" %}
-    {% if pub_date contains '00:00' %}
-    <div class="date"><span>{{ page.original_date | date: "%B %-d %Y" }}</span></div>
-    {% else %}
-    <div class="date"><span>{{ page.original_date | date: "%B %-d %Y &nbsp&nbsp - &nbsp&nbsp %R" }}</span></div>
-    {% endif %}
-    <h4>Last Updated</h4>
-  {% else %}
-    <h4>Published</h4>
-  {% endif %}
     {% assign pub_date = page.date | date: "%B %-d %Y &nbsp&nbsp - &nbsp&nbsp %R" %}
     {% if pub_date contains '00:00' %}
     <div class="date"><span>{{ page.date | date: "%B %-d %Y" }}</span></div>
     {% else %}
     <div class="date"><span>{{ page.date | date: "%B %-d %Y &nbsp&nbsp - &nbsp&nbsp %R" }}</span></div>
     {% endif %}
+    {% if page.updated != nil %}
+      <h4>Last Updated</h4>
+      {% assign pub_date = page.updated | date: "%B %-d %Y &nbsp&nbsp - &nbsp&nbsp %R" %}
+      {% if pub_date contains '00:00' %}
+      <div class="date"><span>{{ page.updated | date: "%B %-d %Y" }}</span></div>
+      {% else %}
+      <div class="date"><span>{{ page.updated | date: "%B %-d %Y &nbsp&nbsp - &nbsp&nbsp %R" }}</span></div>
+      {% endif %}
+    {% endif %}
   
-  {% unless page.tags == empty %}
-    <h4>Tags</h4>
-    <ul class="tag_box">
-    {% assign tags_list = page.tags %}
-    {% include JB/tags_list %}
-    </ul>
-  {% endunless %}  
+    {% unless page.tags == empty %}
+      <h4>Tags</h4>
+      <ul class="tag_box">
+      {% assign tags_list = page.tags %}
+      {% include JB/tags_list %}
+      </ul>
+    {% endunless %}  
   </div>
 </div>
